fixed the issue with List.of