@@ -9,6 +9,8 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import static org.mockito.Mockito.*;
 import static org.mockito.MockitoAnnotations.openMocks;
@@ -30,11 +32,13 @@ public class DashboardControllerTest {
     @Test
     public void shouldConvertTheListReturnedList(){
         List<List<Object>> dashboardList =
-                List.of(
-                        List.of("Brand 1", new BigInteger(String.valueOf(2)), new BigDecimal(2000000)),
-                        List.of("Brand 2", new BigInteger(String.valueOf(3)), new BigDecimal(54000000))
+                Arrays.asList(
+                        Arrays.asList("Brand 1", new BigInteger(String.valueOf(2)), new BigDecimal(73020000)),
+                        Arrays.asList("Brand 2", new BigInteger(String.valueOf(3)), new BigDecimal(54000000))
                 );
-        List<Dashboard> dashboardAction = Dashboard.toDashboard(dashboardList);
+
+
+        ArrayList<Dashboard> dashboardAction = Dashboard.toDashboard(dashboardList);
         Assert.assertEquals(dashboardAction.size(), dashboardList.size());
     }
 }
