@@ -9,6 +9,8 @@ import org.mockito.Mock;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.web.util.UriComponentsBuilder;
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -59,7 +61,7 @@ class UserControllerTest {
 
     @Test
     void shouldTestUserDTO_Convert() {
-        List<User> userList = List.of(
+        List<User> userList = Arrays.asList(
                 new User(1L, "username1", "password1"),
                 new User(2L, "username2", "password2")
         );
@@ -70,7 +72,7 @@ class UserControllerTest {
 
     @Test
     void shouldTestListAll() {
-        List<User> userList = List.of(
+        List<User> userList = Arrays.asList(
                 new User(1L, "username1", "password1"),
                 new User(2L, "username2", "password2")
         );
